force-app/main/default/objects/SupportRequest__c/SupportRequest__c.object-meta.xml
<CustomObject>
    <label>Solicitud de soporte técnico</label>
    <nameField>
        <label>Solicitud de soporte técnico Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitudes de soporte técnico</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>