force-app/main/default/objects/SupportRequest__c/fields/ExpectedResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResolutionDate__c</fullName>
    <label>Fecha de resolución esperada</label>
    <type>Date</type>
</CustomField>