force-app/main/default/objects/SupportRequest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>Baja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>